--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -91,7 +91,7 @@
         });
         preencherTabela(produtos);
       } catch (err) {
-        listaProdutos.innerHTML = <tr><td colspan="8" style="color:red;text-align:center;">Erro ao carregar produtos: ${err.message}</td></tr>;
+        listaProdutos.innerHTML = `<tr><td colspan="8" style="color:red;text-align:center;">Erro ao carregar produtos: ${err.message}</td></tr>`;
       }
     }
 
@@ -102,13 +102,13 @@
         return;
       }
       produtos.forEach((produto) => {
-        const precoFormatado = R$ ${parseFloat(produto.preco).toFixed(2).replace('.', ',')};
+        const precoFormatado = `R$ ${parseFloat(produto.preco).toFixed(2).replace('.', ',')}`;
         const imagens = produto.imagens || [];
         const miniaturas = imagens.length > 0
-          ? imagens.map((img, i) => <img src="${img}" class="thumbnail" alt="Imagem ${i + 1}" />).join('')
+          ? imagens.map((img, i) => `<img src="${img}" class="thumbnail" alt="Imagem ${i + 1}" />`).join('')
           : 'Sem imagens';
 
-        listaProdutos.innerHTML += 
+        listaProdutos.innerHTML += `
           <tr>
             <td>${produto.nome}</td>
             <td>${produto.descricao || 'N/A'}</td>
@@ -119,7 +119,7 @@
             <td>${miniaturas}</td>
             <td><button class="excluir" onclick="excluirProduto('${produto.id}')">Excluir</button></td>
           </tr>
-        ;
+        `;
       });
     }
 
@@ -130,14 +130,14 @@
         alert('Produto excluído com sucesso');
         carregarProdutos();
       } catch (err) {
-        alert(Erro ao excluir produto: ${err.message});
+        alert(`Erro ao excluir produto: ${err.message}`);
       }
     }
 
     async function uploadImagens(files) {
       const imageUrls = [];
       for (const file of files) {
-        const storageRef = ref(storage, imagens/${Date.now()}_${file.name});
+        const storageRef = ref(storage, `imagens/${Date.now()}_${file.name}`);
         await uploadBytes(storageRef, file);
         const url = await getDownloadURL(storageRef);
         imageUrls.push(url);
@@ -172,42 +172,11 @@
         formProduto.reset();
         carregarProdutos();
       } catch (error) {
-        erro.textContent = Erro ao adicionar produto: ${error.message};
+        erro.textContent = `Erro ao adicionar produto: ${error.message}`;
       }
     });
 
     document.addEventListener('DOMContentLoaded', carregarProdutos);
-    <script type="module" src="firebase.js"></script>
-<!-- Firebase App (core) -->
-<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
-
-<!-- Firestore -->
-<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
-
-<!-- Storage -->
-<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-storage-compat.js"></script>
-
-<!-- Analytics -->
-<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-analytics-compat.js"></script>
-
-<script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyDryJc0Y7JV_Os5DZdEDts5XaFUEtJ7wDk",
-    authDomain: "centrodecompra-5fa91.firebaseapp.com",
-    projectId: "centrodecompra-5fa91",
-    storageBucket: "centrodecompra-5fa91.appspot.com",
-    messagingSenderId: "276696026262",
-    appId: "1:276696026262:web:979a68c0796ea1d17346b7",
-    measurementId: "G-PM11NQL61N"
-  };
-
-  firebase.initializeApp(firebaseConfig);
-  firebase.analytics();
-
-  window.firebaseDb = firebase.firestore();
-  window.firebaseStorage = firebase.storage();
-</script>
-
   </script>
 </body>
 </html>
