--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <title>CentrodeCompra - Ofertas do Dia em Amazon, Shein, Shopee e Mais</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" type="image/png" sizes="32x32" href="logos/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="logos/favicon-16x16.png">
   <script src="https://kit.fontawesome.com/YOUR_FONTAWESOME_KEY.js" crossorigin="anonymous"></script>
   <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
@@ -128,24 +130,24 @@
       margin: 0 10px;
     }
     .ad-container {
-      margin: 10px auto; /* Reduzido de 20px para 10px */
+      margin: 10px auto;
       max-width: 300px;
       text-align: center;
     }
     .lojas-parceiras {
-      margin-bottom: 10px; /* Reduzido para minimizar espaço */
+      margin-bottom: 10px;
     }
     #busca {
-      margin-bottom: 10px; /* Adicionado para controlar espaço após a barra de busca */
+      margin-bottom: 10px;
     }
     #grid-produtos {
-      margin-top: 10px; /* Reduzido para aproximar os produtos */
+      margin-top: 10px;
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
       gap: 20px;
     }
     #ofertas-section {
-      padding: 10px 0; /* Reduzido para diminuir espaço interno */
+      padding: 10px 0;
     }
   </style>
 </head>
@@ -231,6 +233,8 @@
         <div id="busca-feedback" class="busca-feedback">Buscando...</div>
         <div class="loading-spinner" id="loading-spinner"></div>
         <!-- AdSense Ad -->
+        <!-- Comentar temporariamente para testar o erro 400 -->
+        <!--
         <div class="ad-container">
           <ins class="adsbygoogle"
                style="display:block"
@@ -242,6 +246,7 @@
             (adsbygoogle = window.adsbygoogle || []).push({});
           </script>
         </div>
+        -->
         <div class="grid-lojas" id="grid-produtos"></div>
         <p class="mensagem-vazia" id="mensagem-vazia">Nenhum produto encontrado.</p>
         <p class="error-message" id="error-message" style="display: none;"></p>
@@ -305,6 +310,300 @@
     </a>
   </div>
 
-  <script src="script.js"></script>
+  <script>
+    const PLANILHA_URL = 'https://opensheet.vercel.app/1SMpUcrobcuWVGq4F_3N59rhs2_GpDo2531_2blpwEhs/Produtos';
+    let produtos = [];
+    let categoriaSelecionada = 'todas';
+    let lojaSelecionada = 'todas';
+    let termoBusca = '';
+    let currentImages = [];
+    let currentImageIndex = 0;
+    let currentPage = 1;
+    const produtosPorPagina = 28;
+    let totalProdutos = 0;
+
+    function normalizarString(str) {
+      return str?.toLowerCase().normalize('NFD').replace(/[\u0300-\u036f]/g, '') || '';
+    }
+
+    function shuffleArray(array) {
+      for (let i = array.length - 1; i > 0; i--) {
+        const j = Math.floor(Math.random() * (i + 1));
+        [array[i], array[j]] = [array[j], array[i]];
+      }
+      return array;
+    }
+
+    function atualizarAnoFooter() {
+      const yearElement = document.getElementById('year');
+      if (yearElement) yearElement.textContent = new Date().getFullYear();
+    }
+
+    function configurarCliqueLogo() {
+      const logo = document.getElementById('site-logo-img');
+      if (!logo) return console.error('ID site-logo-img não encontrado');
+      let clickCount = 0;
+      let clickTimer;
+      logo.addEventListener('click', (e) => {
+        e.preventDefault();
+        clickCount++;
+        if (clickCount === 1) {
+          clickTimer = setTimeout(() => clickCount = 0, 500);
+        } else if (clickCount === 3) {
+          clearTimeout(clickTimer);
+          window.location.href = `admin-xyz-123.html?tempToken=triple-click-access`;
+          clickCount = 0;
+        }
+      });
+    }
+
+    async function carregarProdutos() {
+      const loadingSpinner = document.getElementById('loading-spinner');
+      const mensagemVazia = document.getElementById('mensagem-vazia');
+      const errorMessage = document.getElementById('error-message');
+      const gridProdutos = document.getElementById('grid-produtos');
+
+      if (!gridProdutos || !mensagemVazia || !errorMessage || !loadingSpinner) {
+        console.error('Elementos essenciais não encontrados');
+        errorMessage.textContent = 'Erro: Elementos da página não encontrados. Contate o suporte.';
+        errorMessage.style.display = 'block';
+        return;
+      }
+
+      loadingSpinner.style.display = 'block';
+      mensagemVazia.style.display = 'none';
+      errorMessage.style.display = 'none';
+      gridProdutos.innerHTML = '';
+
+      try {
+        console.log('Carregando produtos de:', PLANILHA_URL);
+        const response = await fetch(PLANILHA_URL, {
+          cache: 'no-store',
+          headers: { 'Accept': 'application/json' }
+        });
+        console.log('Status da resposta:', response.status, response.statusText);
+        if (!response.ok) throw new Error(`Erro ${response.status}: Falha ao carregar produtos`);
+        produtos = await response.json();
+        console.log('Dados recebidos:', produtos);
+
+        if (!Array.isArray(produtos)) throw new Error('Resposta inválida: produtos não é um array');
+        totalProdutos = produtos.length;
+        filtrarProdutos();
+        atualizarPaginacao();
+      } catch (error) {
+        console.error('Erro ao carregar produtos:', error);
+        errorMessage.textContent = `Erro: ${error.message}. Tente novamente mais tarde.`;
+        errorMessage.style.display = 'block';
+        mensagemVazia.style.display = 'none';
+        gridProdutos.style.display = 'none';
+      } finally {
+        loadingSpinner.style.display = 'none';
+      }
+    }
+
+    function filtrarProdutos() {
+      const gridProdutos = document.getElementById('grid-produtos');
+      const mensagemVazia = document.getElementById('mensagem-vazia');
+
+      const produtosFiltrados = produtos.filter((produto) => {
+        const matchCategoria = categoriaSelecionada === 'todas' ||
+          normalizarString(produto.categoria) === normalizarString(categoriaSelecionada);
+        const matchLoja = lojaSelecionada === 'todas' ||
+          normalizarString(produto.loja) === normalizarString(lojaSelecionada);
+        const matchBusca = !termoBusca ||
+          normalizarString(produto.nome).includes(normalizarString(termoBusca));
+        return matchCategoria && matchLoja && matchBusca;
+      });
+
+      const start = (currentPage - 1) * produtosPorPagina;
+      const end = start + produtosPorPagina;
+      const produtosPaginados = shuffleArray(produtosFiltrados.slice(start, end));
+
+      console.log('Produtos filtrados:', produtosPaginados);
+      gridProdutos.innerHTML = '';
+      if (produtosPaginados.length === 0) {
+        mensagemVazia.style.display = 'block';
+        gridProdutos.style.display = 'none';
+        return;
+      }
+
+      mensagemVazia.style.display = 'none';
+      gridProdutos.style.display = 'grid';
+
+      produtosPaginados.forEach((produto, produtoIndex) => {
+        const imagens = produto.imagens && typeof produto.imagens === 'string' && produto.imagens.trim()
+          ? produto.imagens.split(',').filter(img => img.trim())
+          : ['imagens/placeholder.jpg'];
+        const carrosselId = `carrossel-${produtoIndex}-${Date.now()}`;
+
+        const produtoDiv = document.createElement('div');
+        produtoDiv.classList.add('produto-card', 'visible');
+        produtoDiv.setAttribute('data-categoria', normalizarString(produto.categoria) || 'todas');
+        produtoDiv.setAttribute('data-loja', normalizarString(produto.loja) || 'todas');
+
+        produtoDiv.innerHTML = `
+          <div class="carrossel" id="${carrosselId}">
+            <div class="carrossel-imagens">
+              ${imagens.map((img, i) => `
+                <img src="${img}" alt="${produto.nome || 'Produto'} ${i + 1}" loading="lazy" width="200" height="200" onerror="this.src='imagens/placeholder.jpg'" onclick="openModal(${produtoIndex}, ${i})">
+              `).join('')}
+            </div>
+            ${imagens.length > 1 ? `
+              <button class="carrossel-prev" onclick="moveCarrossel('${carrosselId}', -1)">◄</button>
+              <button class="carrossel-next" onclick="moveCarrossel('${carrosselId}', 1)">▶</button>
+              <div class="carrossel-dots">
+                ${imagens.map((_, i) => `<span class="carrossel-dot ${i === 0 ? 'ativo' : ''}" onclick="setCarrosselImage('${carrosselId}', ${i})"></span>`).join('')}
+              </div>
+            ` : ''}
+          </div>
+          <span>${produto.nome || 'Produto sem nome'}</span>
+          <span class="descricao">Loja: ${produto.loja || 'Desconhecida'}</span>
+          <p class="preco"><a href="${produto.link || '#'}" target="_blank" class="ver-preco">Clique aqui para ver o preço</a></p>
+          <a href="${produto.link || '#'}" target="_blank" class="ver-na-loja ${produto.loja?.toLowerCase() || 'default'}">Comprar</a>
+        `;
+        gridProdutos.appendChild(produtoDiv);
+      });
+    }
+
+    function moveCarrossel(carrosselId, direction) {
+      const carrossel = document.getElementById(carrosselId);
+      const imagens = carrossel.querySelector('.carrossel-imagens');
+      const dots = carrossel.querySelectorAll('.carrossel-dot');
+      let currentIndex = parseInt(imagens.dataset.index || 0);
+      const totalImagens = imagens.children.length;
+      currentIndex = (currentIndex + direction + totalImagens) % totalImagens;
+      imagens.style.transform = `translateX(-${currentIndex * 100}%)`;
+      imagens.dataset.index = currentIndex;
+      dots.forEach((dot, i) => dot.classList.toggle('ativo', i === currentIndex));
+    }
+
+    function setCarrosselImage(carrosselId, index) {
+      const carrossel = document.getElementById(carrosselId);
+      const imagens = carrossel.querySelector('.carrossel-imagens');
+      const dots = carrossel.querySelectorAll('.carrossel-dot');
+      imagens.style.transform = `translateX(-${index * 100}%)`;
+      imagens.dataset.index = index;
+      dots.forEach((dot, i) => dot.classList.toggle('ativo', i === index));
+    }
+
+    async function openModal(produtoIndex, imageIndex) {
+      const modal = document.getElementById('imageModal');
+      const carrosselImagens = document.getElementById('modalCarrosselImagens');
+      const carrosselDots = document.getElementById('modalCarrosselDots');
+
+      try {
+        currentImages = produtos[produtoIndex]?.imagens && typeof produtos[produtoIndex].imagens === 'string'
+          ? produtos[produtoIndex].imagens.split(',').filter(img => img.trim())
+          : ['imagens/placeholder.jpg'];
+        currentImageIndex = imageIndex;
+
+        carrosselImagens.innerHTML = currentImages.map(img => `<img src="${img}" alt="Imagem ampliada" onerror="this.src='imagens/placeholder.jpg'">`).join('');
+        carrosselImagens.style.transform = `translateX(-${currentImageIndex * 100}%)`;
+
+        carrosselDots.innerHTML = currentImages.map((_, i) => `<span class="carrossel-dot ${i === currentImageIndex ? 'ativo' : ''}" onclick="setModalCarrosselImage(${i})"></span>`).join('');
+
+        modal.style.display = 'flex';
+      } catch (error) {
+        console.error('Erro ao abrir modal:', error);
+      }
+    }
+
+    function moveModalCarrossel(direction) {
+      const carrosselImagens = document.getElementById('modalCarrosselImagens');
+      const carrosselDots = document.getElementById('modalCarrosselDots').children;
+      const totalImagens = currentImages.length;
+      currentImageIndex = (currentImageIndex + direction + totalImagens) % totalImagens;
+      carrosselImagens.style.transform = `translateX(-${currentImageIndex * 100}%)`;
+      Array.from(carrosselDots).forEach((dot, i) => dot.classList.toggle('ativo', i === currentImageIndex));
+    }
+
+    function setModalCarrosselImage(index) {
+      const carrosselImagens = document.getElementById('modalCarrosselImagens');
+      const carrosselDots = document.getElementById('modalCarrosselDots').children;
+      currentImageIndex = index;
+      carrosselImagens.style.transform = `translateX(-${currentImageIndex * 100}%)`;
+      Array.from(carrosselDots).forEach((dot, i) => dot.classList.toggle('ativo', i === currentImageIndex));
+    }
+
+    function closeModal() {
+      const modal = document.getElementById('imageModal');
+      modal.style.display = 'none';
+      currentImages = [];
+      currentImageIndex = 0;
+    }
+
+    function configurarBusca() {
+      const buscaInput = document.getElementById('busca');
+      const buscaFeedback = document.getElementById('busca-feedback');
+      if (buscaInput && buscaFeedback) {
+        buscaInput.addEventListener('input', (e) => {
+          termoBusca = e.target.value;
+          buscaFeedback.style.display = termoBusca ? 'block' : 'none';
+          currentPage = 1;
+          filtrarProdutos();
+        });
+      }
+    }
+
+    function filtrarPorCategoria(categoria) {
+      categoriaSelecionada = categoria;
+      currentPage = 1;
+      document.querySelectorAll('.categoria-item').forEach(item => item.classList.remove('ativa'));
+      document.querySelector(`.categoria-item[data-categoria="${categoria}"]`)?.classList.add('ativa');
+      console.log('Categoria selecionada:', categoria);
+      filtrarProdutos();
+    }
+
+    function filtrarPorLoja(loja) {
+      lojaSelecionada = loja;
+      currentPage = 1;
+      document.querySelectorAll('.loja, .loja-todas').forEach(item => item.classList.remove('ativa'));
+      document.querySelector(`[data-loja="${loja}"]`)?.classList.add('ativa');
+      console.log('Loja selecionada:', loja);
+      filtrarProdutos();
+    }
+
+    function configurarPaginacao() {
+      const prevButton = document.getElementById('prev-page');
+      const nextButton = document.getElementById('next-page');
+      if (prevButton) {
+        prevButton.addEventListener('click', () => {
+          if (currentPage > 1) {
+            currentPage--;
+            filtrarProdutos();
+          }
+        });
+      }
+      if (nextButton) {
+        nextButton.addEventListener('click', () => {
+          currentPage++;
+          filtrarProdutos();
+        });
+      }
+    }
+
+    function atualizarPaginacao() {
+      const prevButton = document.getElementById('prev-page');
+      const nextButton = document.getElementById('next-page');
+      const pageInfo = document.getElementById('page-info');
+      if (prevButton && nextButton && pageInfo) {
+        prevButton.disabled = currentPage === 1;
+        nextButton.disabled = currentPage >= Math.ceil(totalProdutos / produtosPorPagina);
+        pageInfo.textContent = `Página ${currentPage} de ${Math.ceil(totalProdutos / produtosPorPagina) || 1}`;
+      }
+    }
+
+    document.addEventListener('DOMContentLoaded', () => {
+      console.log('Script carregado');
+      carregarProdutos();
+      configurarBusca();
+      configurarPaginacao();
+      atualizarAnoFooter();
+      configurarCliqueLogo();
+      document.getElementById('imageModal')?.addEventListener('click', (e) => {
+        if (e.target === e.currentTarget) closeModal();
+      });
+    });
+  </script>
 </body>
 </html>
