--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta property="og:description" content="Encontre as melhores ofertas em lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba.">
   <meta property="og:image" content="logos/logoscentrodecompras.jpeg">
   <meta property="og:url" content="https://www.centrodecompra.com.br/">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://pagead2.googlesyndication.com https://www.google-analytics.com https://www.google.com; worker-src 'self' blob:; img-src 'self' https://drive.google.com https://*.googleusercontent.com data:; style-src 'self' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com;">
   <title>CentrodeCompra - Ofertas do Dia</title>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4531749081462125" crossorigin="anonymous"></script>
   <link rel="preload" href="logos/logoscentrodecompras.jpeg" as="image">
@@ -398,6 +399,14 @@
       text-align: center;
       color: #666;
     }
+    @media (forced-colors: active) {
+      .container, .site-header, .sidebar, .loja, .produto-card {
+        forced-color-adjust: auto;
+        border: 1px solid CanvasText;
+        background: Canvas;
+        color: CanvasText;
+      }
+    }
     @media (max-width: 1400px) {
       .container {
         max-width: 1200px;
@@ -460,7 +469,7 @@
   <header class="site-header">
     <div class="logo-container">
       <a href="index.html">
-        <img src="logos/logoscentrodecompras.jpeg" alt="CentrodeCompra" id="site-logo-img" width="150" height="50">
+        <img src="logos/logoscentrodecompras.jpeg" alt="CentrodeCompra" id="site-logo-img" width="150" height="50" onerror="this.src='https://via.placeholder.com/150x50?text=Logo'">
       </a>
     </div>
     <div class="header-text">
@@ -514,22 +523,28 @@
           <div class="grid-lojas">
             <div class="loja-todas ativa" onclick="filtrarPorLoja('todas')"><span>Todas as Lojas</span></div>
             <div class="loja" data-loja="amazon" onclick="filtrarPorLoja('amazon')">
-              <img src="logos/amazon.png" alt="Amazon" loading="lazy" width="100" height="40"><span>Amazon</span>
+              <img src="logos/amazon.png" alt="Amazon" loading="lazy" width="100" height="40" onerror="this.src='https://via.placeholder.com/100x40?text=Amazon'">
+              <span>Amazon</span>
             </div>
             <div class="loja" data-loja="magalu" onclick="filtrarPorLoja('magalu')">
-              <img src="logos/magalu.png" alt="Magalu" loading="lazy" width="100" height="40"><span>Magalu</span>
+              <img src="logos/magalu.png" alt="Magalu" loading="lazy" width="100" height="40" onerror="this.src='https://via.placeholder.com/100x40?text=Magalu'">
+              <span>Magalu</span>
             </div>
             <div class="loja" data-loja="shein" onclick="filtrarPorLoja('shein')">
-              <img src="logos/shein.png" alt="Shein" loading="lazy" width="100" height="40"><span>Shein</span>
+              <img src="logos/shein.png" alt="Shein" loading="lazy" width="100" height="40" onerror="this.src='https://via.placeholder.com/100x40?text=Shein'">
+              <span>Shein</span>
             </div>
             <div class="loja" data-loja="shopee" onclick="filtrarPorLoja('shopee')">
-              <img src="logos/shopee.png" alt="Shopee" loading="lazy" width="100" height="40"><span>Shopee</span>
+              <img src="logos/shopee.png" alt="Shopee" loading="lazy" width="100" height="40" onerror="this.src='https://via.placeholder.com/100x40?text=Shopee'">
+              <span>Shopee</span>
             </div>
             <div class="loja" data-loja="mercadolivre" onclick="filtrarPorLoja('mercadolivre')">
-              <img src="logos/mercadolivre.jpg" alt="Mercado Livre" loading="lazy" width="100" height="40"><span>Mercado Livre</span>
+              <img src="logos/mercadolivre.jpg" alt="Mercado Livre" loading="lazy" width="100" height="40" onerror="this.src='https://via.placeholder.com/100x40?text=Mercado+Livre'">
+              <span>Mercado Livre</span>
             </div>
             <div class="loja" data-loja="alibaba" onclick="filtrarPorLoja('alibaba')">
-              <img src="logos/alibaba.png" alt="Alibaba" loading="lazy" width="100" height="40"><span>Alibaba</span>
+              <img src="logos/alibaba.png" alt="Alibaba" loading="lazy" width="100" height="40" onerror="this.src='https://via.placeholder.com/100x40?text=Alibaba'">
+              <span>Alibaba</span>
             </div>
           </div>
         </div>
@@ -547,19 +562,19 @@
       </section>
       <div class="social-links">
         <a href="https://www.tiktok.com/@cdc.centraldecompras" target="_blank" rel="noopener noreferrer">
-          <div class="icon"><img src="logos/tiktok.png" alt="TikTok" loading="lazy" width="40" height="40"></div>
+          <div class="icon"><img src="logos/tiktok.png" alt="TikTok" loading="lazy" width="40" height="40" onerror="this.src='https://via.placeholder.com/40?text=TikTok'"></div>
           <span>TikTok</span>
         </a>
         <a href="https://www.instagram.com/cdccentrodecompras/" target="_blank" rel="noopener noreferrer">
-          <div class="icon"><img src="logos/Instagram.png" alt="Instagram" loading="lazy" width="40" height="40"></div>
+          <div class="icon"><img src="logos/Instagram.png" alt="Instagram" loading="lazy" width="40" height="40" onerror="this.src='https://via.placeholder.com/40?text=Instagram'"></div>
           <span>Instagram</span>
         </a>
         <a href="https://x.com/ComprasCdc" target="_blank" rel="noopener noreferrer">
-          <div class="icon"><img src="logos/X.png" alt="X" loading="lazy" width="40" height="40"></div>
+          <div class="icon"><img src="logos/X.png" alt="X" loading="lazy" width="40" height="40" onerror="this.src='https://via.placeholder.com/40?text=X'"></div>
           <span>X</span>
         </a>
         <a href="https://www.youtube.com/channel/UCaKHlI-hWqwdAXS6Xsv3ZzA" target="_blank" rel="noopener noreferrer">
-          <div class="icon"><img src="logos/youtube.png" alt="YouTube" loading="lazy" width="40" height="40"></div>
+          <div class="icon"><img src="logos/youtube.png" alt="YouTube" loading="lazy" width="40" height="40" onerror="this.src='https://via.placeholder.com/40?text=YouTube'"></div>
           <span>YouTube</span>
         </a>
       </div>
@@ -587,7 +602,7 @@
 
   <div class="robo-assistente">
     <a href="https://api.whatsapp.com/send?phone=5521975179737" target="_blank" rel="noopener noreferrer">
-      <img src="imagens/robo.jpg" alt="Robô Assistente" class="robo-imagem" loading="lazy" width="60" height="60">
+      <img src="imagens/robo.jpg" alt="Robô Assistente" class="robo-imagem" loading="lazy" width="60" height="60" onerror="this.src='https://via.placeholder.com/60?text=Robo'">
       <div class="robo-texto">Posso ajudar?</div>
     </a>
   </div>
@@ -766,7 +781,7 @@
       produtosPaginados.forEach((produto, produtoIndex) => {
         const imagens = produto.imagens && typeof produto.imagens === 'string' && produto.imagens.trim()
           ? produto.imagens.split(',').filter(img => img.trim())
-          : ['imagens/placeholder.jpg'];
+          : ['https://via.placeholder.com/200?text=Produto'];
         const carrosselId = `carrossel-${produtoIndex}-${Date.now()}`;
 
         const produtoDiv = document.createElement('div');
@@ -778,7 +793,7 @@
           <div class="carrossel" id="${carrosselId}">
             <div class="carrossel-imagens">
               ${imagens.map((img, i) => `
-                <img src="${img}" alt="${produto.nome || 'Produto'} ${i + 1}" loading="lazy" width="200" height="200" onerror="this.src='imagens/placeholder.jpg'" onclick="openModal(${produtoIndex}, ${i})">
+                <img src="${img}" alt="${produto.nome || 'Produto'} ${i + 1}" loading="lazy" width="200" height="200" onerror="this.src='https://via.placeholder.com/200?text=Produto'" onclick="openModal(${produtoIndex}, ${i})">
               `).join('')}
             </div>
             ${imagens.length > 1 ? `
@@ -827,10 +842,10 @@
       try {
         currentImages = produtos[produtoIndex]?.imagens && typeof produtos[produtoIndex].imagens === 'string'
           ? produtos[produtoIndex].imagens.split(',').filter(img => img.trim())
-          : ['imagens/placeholder.jpg'];
+          : ['https://via.placeholder.com/200?text=Produto'];
         currentImageIndex = imageIndex;
 
-        carrosselImagens.innerHTML = currentImages.map(img => `<img src="${img}" alt="Imagem ampliada" onerror="this.src='imagens/placeholder.jpg'">`).join('');
+        carrosselImagens.innerHTML = currentImages.map(img => `<img src="${img}" alt="Imagem ampliada" onerror="this.src='https://via.placeholder.com/200?text=Produto'">`).join('');
         carrosselImagens.style.transform = `translateX(-${currentImageIndex * 100}%)`;
 
         carrosselDots.innerHTML = currentImages.map((_, i) => `<span class="carrossel-dot ${i === currentImageIndex ? 'ativa' : ''}" onclick="setModalCarrosselImage(${i})"></span>`).join('');
